--- a/cpp/example_code/ec2/CMakeLists.txt
+++ b/cpp/example_code/ec2/CMakeLists.txt
@@ -13,14 +13,6 @@ project("${SERVICE_NAME}-examples")
 # Set the C++ standard to use to build this target.
 set(CMAKE_CXX_STANDARD 11)
 
-# Build shared libraries by default.
-set(BUILD_SHARED_LIBS ON)
-
-# Enable CTest for testing these code examples.
-if (BUILD_TESTS)
-    include(CTest)
-endif ()
-
 # Use the MSVC variable to determine if this is a Windows build.
 set(WINDOWS_BUILD ${MSVC})
 
@@ -37,7 +29,7 @@ if (WINDOWS_BUILD AND AWSSDK_INSTALL_AS_SHARED_LIBS)
     # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
 
     # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
-    # and set the proper subdirectory to the executables' location.
+    # and set the proper subdirectory to the executable's location.
 
     AWSSDK_CPY_DYN_LIBS(SERVICE_COMPONENTS "" ${CMAKE_CURRENT_BINARY_DIR}${BIN_SUB_DIR})
 endif ()
