--- a/rustv1/examples/bedrock-runtime/Cargo.toml
+++ b/rustv1/examples/bedrock-runtime/Cargo.toml
@@ -8,5 +8,10 @@ edition = "2021"
 [dependencies]
 aws-config = "1.5.4"
 aws-sdk-bedrockruntime = "1.40.0"
+aws-smithy-runtime-api = "1.7.1"
+aws-smithy-types = "1.2.0"
+reqwest = "0.12.5"
+serde = "1.0.204"
+serde_json = "1.0.120"
 tokio = { version = "1.38.1", features = ["full"] }
 tracing-subscriber = "0.3.18"
