--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -1304,7 +1304,7 @@ bedrock-runtime_Scenario_ToolUseDemo_AnthropicClaude:
           github: rustv1/examples/bedrock-runtime
           excerpts:
             - description: "The primary scenario and logic for the demo. This orchestrates the conversation between the user, the &BR; Converse API, and a weather tool."
-              snippet-tags:
+              snippet_tags:
                 - rust.bedrock-runtime.Converse_AnthropicClaude.tool-use
             - description: "The weather tool used by the demo. This script defines the tool specification and implements the logic to retrieve weather data using from the Open-Meteo API."
               snippet_tags:
