--- a/javav2/example_code/batch/pom.xml
+++ b/javav2/example_code/batch/pom.xml
@@ -83,6 +83,10 @@
             <version>2.10.1</version>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.9.2</version>
