--- a/.doc_gen/metadata/keyspaces_metadata.yaml
+++ b/.doc_gen/metadata/keyspaces_metadata.yaml
@@ -453,15 +453,13 @@ keyspaces_DeleteKeyspace:
   services:
     keyspaces: {DeleteKeyspace}
 keyspaces_Scenario_GetStartedKeyspaces:
-  title: Get started with &KEY; keyspaces and tables using an &AWS; SDK
-  title_abbrev: Get started with keyspaces and tables
   synopsis_list:
     - Create a keyspace and table. The table schema holds movie data and has point-in-time recovery enabled.
     - Connect to the keyspace using a secure TLS connection with SigV4 authentication.
     - Query the table. Add, retrieve, and update movie data.
     - Update the table. Add a column to track watched movies.
     - Restore the table to its previous state and clean up resources.
-  category: Scenarios
+  category: Basics
   languages:
     .NET:
       versions:
