--- a/.doc_gen/metadata/kinesis_metadata.yaml
+++ b/.doc_gen/metadata/kinesis_metadata.yaml
@@ -297,13 +297,11 @@ kinesis_AddTagsToStream:
   services:
     kinesis: {AddTagsToStream}
 kinesis_Scenario_GettingStarted:
-  title: Get started with basic &AK; data stream operations using an &AWS; SDK
-  title_abbrev: Get started with data streams
   synopsis_list:
     - Create a stream and put a record in it.
     - Create a shard iterator.
     - Read the record, then clean up resources.
-  category: Scenarios
+  category: Basics
   languages:
     SAP ABAP:
       versions:
