--- a/.doc_gen/metadata/kms_metadata.yaml
+++ b/.doc_gen/metadata/kms_metadata.yaml
@@ -1,8 +1,8 @@
 # zexi 0.4.0
 kms_Hello:
-  title: Hello &kms-key;
-  title_abbrev: Hello &kms-key;
-  synopsis: get started using &kms-key;.
+  title: Hello &KMS;
+  title_abbrev: Hello &KMS;
+  synopsis: get started using &KMS;.
   category: Hello
   languages:
     Java:
@@ -785,8 +785,6 @@ kms_Scenario_KeyManagement:
   services:
     kms: {CreateKey, ListKeys, DescribeKey, GenerateDataKey, EnableKey, DisableKey, ScheduleKeyDeletion}
 kms_Scenario_Basics:
-  title: Learn core operations for &kms-key; using an &AWS; SDK
-  title_abbrev: Learn &kms-key; core operations
   synopsis_list:
     - Create a &kms-key;.
     - List &kms-keys; for your account and get details about them.
@@ -795,7 +793,7 @@ kms_Scenario_Basics:
     - Generate an asymmetric key used to digitally sign data.
     - Tag keys.
     - Delete &kms-keys;.
-  category: Scenarios
+  category: Basics
   languages:
     Java:
       versions:
